force-app/main/default/objects/ConditionChange__c/ConditionChange__c.object-meta.xml
<CustomObject>
    <label>条件変更</label>
    <nameField>
        <displayFormat>CC-{000000000}</displayFormat>
        <label>条件変更名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>