force-app/main/default/objects/ConditionChange__c/fields/AccountId_del__c.field-meta.xml
<CustomField>
    <fullName>AccountId_del__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>企業ID</label>
    <type>Text</type>
</CustomField>