force-app/main/default/objects/ConditionChange__c/fields/AccountNameKana_del__c.field-meta.xml
<CustomField>
    <fullName>AccountNameKana_del__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>企業名カナ</label>
    <type>Text</type>
</CustomField>