force-app/main/default/objects/ConditionChange__c/fields/ApplicationComment__c.field-meta.xml
<CustomField>
    <fullName>ApplicationComment__c</fullName>
    <label>申請コメント</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>