force-app/main/default/objects/ConditionChange__c/fields/BillingManagementLinkNecessity__c.field-meta.xml
<CustomField>
    <fullName>BillingManagementLinkNecessity__c</fullName>
    <label>請求管理連携要否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Necessity</valueSetName>
    </valueSet>
</CustomField>