force-app/main/default/objects/ConditionChange__c/fields/BuildingYear__c.field-meta.xml
<CustomField>
    <fullName>BuildingYear__c</fullName>
    <label>新築年（年）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>