force-app/main/default/objects/ConditionChange__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ケース</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>条件変更</relationshipLabel>
    <relationshipName>Eg0h</relationshipName>
    <type>Lookup</type>
</CustomField>