force-app/main/default/objects/ConditionChange__c/fields/ChangeContentPriceIncreaseType__c.field-meta.xml
<CustomField>
    <fullName>ChangeContentPriceIncreaseType__c</fullName>
    <label>変更内容_値上区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>値上げ</fullName>
            </value>
            <value>
                <fullName>値下げ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>