force-app/main/default/objects/ConditionChange__c/fields/ChangeContentRentTotal__c.field-meta.xml
<CustomField>
    <fullName>ChangeContentRentTotal__c</fullName>
    <label>変更内容_月額合計</label>
    <length>255</length>
    <type>Text</type>
</CustomField>