force-app/main/default/objects/ConditionChange__c/fields/ChargeSettingDate__c.field-meta.xml
<CustomField>
    <fullName>ChargeSettingDate__c</fullName>
    <label>担当設定日</label>
    <type>Date</type>
</CustomField>