force-app/main/default/objects/ConditionChange__c/fields/ChargeTeam__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当チーム</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>条件変更</relationshipLabel>
    <relationshipName>Ser9</relationshipName>
    <type>Lookup</type>
</CustomField>