force-app/main/default/objects/ConditionChange__c/fields/ChecksheetConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ChecksheetConfirmDate__c</fullName>
    <label>チェックシート確認日</label>
    <type>Date</type>
</CustomField>