force-app/main/default/objects/ConditionChange__c/fields/CollectDate__c.field-meta.xml
<CustomField>
    <fullName>CollectDate__c</fullName>
    <label>エビデンス回収日</label>
    <type>Date</type>
</CustomField>