force-app/main/default/objects/ConditionChange__c/fields/CollectScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>CollectScheduledDate__c</fullName>
    <label>回収予定日</label>
    <type>Date</type>
</CustomField>