force-app/main/default/objects/ConditionChange__c/fields/CommonChargeDifference__c.field-meta.xml
<CustomField>
    <fullName>CommonChargeDifference__c</fullName>
    <formula>IF(
OR(
ISBLANK( PreviousCommonCharge__c ),ISBLANK( NewCommonCharge__c )
), null, NewCommonCharge__c - PreviousCommonCharge__c 
)</formula>
    <label>共益費差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>