force-app/main/default/objects/ConditionChange__c/fields/CompanyRule__c.field-meta.xml
<CustomField>
    <fullName>CompanyRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>企業ルール</label>
    <referenceTo>ServiceContractRenewalConditionChange__c</referenceTo>
    <relationshipLabel>条件変更</relationshipLabel>
    <relationshipName>CCd442</relationshipName>
    <type>Lookup</type>
</CustomField>