force-app/main/default/objects/ConditionChange__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <label>完了日</label>
    <type>Date</type>
</CustomField>