force-app/main/default/objects/ConditionChange__c/fields/ConditionChangeCounterStaff__c.field-meta.xml
<CustomField>
    <fullName>ConditionChangeCounterStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>条件変更窓口担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>条件変更 (条件変更窓口担当者)</relationshipLabel>
    <relationshipName>RelationConditionChangeContact</relationshipName>
    <type>Lookup</type>
</CustomField>