force-app/main/default/objects/ConditionChange__c/fields/ContentConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ContentConfirmDate__c</fullName>
    <label>内容確認日</label>
    <type>Date</type>
</CustomField>