force-app/main/default/objects/ConditionChange__c/fields/ContractBeginning__c.field-meta.xml
<CustomField>
    <fullName>ContractBeginning__c</fullName>
    <label>契約始期</label>
    <type>Date</type>
</CustomField>