force-app/main/default/objects/ConditionChange__c/fields/ContractMoneyAccount1__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyAccount1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送金先口座1</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>ConditionChangeBankAccountRelation109</relationshipName>
    <type>Lookup</type>
</CustomField>