force-app/main/default/objects/ConditionChange__c/fields/DataChangeContent__c.field-meta.xml
<CustomField>
    <fullName>DataChangeContent__c</fullName>
    <label>データ修正内容</label>
    <type>TextArea</type>
</CustomField>