force-app/main/default/objects/ConditionChange__c/fields/DataCorrectionSecondaryCheckDate__c.field-meta.xml
<CustomField>
    <fullName>DataCorrectionSecondaryCheckDate__c</fullName>
    <label>データ修正２次チェック日</label>
    <type>Date</type>
</CustomField>