force-app/main/default/objects/ConditionChange__c/fields/DecisionType__c.field-meta.xml
<CustomField>
    <fullName>DecisionType__c</fullName>
    <label>決裁種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>企業決裁</fullName>
            </value>
            <value>
                <fullName>SNT決裁</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>