force-app/main/default/objects/ConditionChange__c/fields/DeficiencyCalculateAmount__c.field-meta.xml
<CustomField>
    <fullName>DeficiencyCalculateAmount__c</fullName>
    <label>過不足精算_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>