force-app/main/default/objects/ConditionChange__c/fields/DocumentCollectDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentCollectDate__c</fullName>
    <label>書類回収日</label>
    <type>Date</type>
</CustomField>