force-app/main/default/objects/ConditionChange__c/fields/DocumentSender__c.field-meta.xml
<CustomField>
    <fullName>DocumentSender__c</fullName>
    <label>書類送付者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>