force-app/main/default/objects/ConditionChange__c/fields/FirstPostReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPostReceiptDate__c</fullName>
    <label>ポスト受領日1回目</label>
    <type>Date</type>
</CustomField>