force-app/main/default/objects/ConditionChange__c/fields/FirstPostRecipient__c.field-meta.xml
<CustomField>
    <fullName>FirstPostRecipient__c</fullName>
    <label>ポスト受領者1回目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>