force-app/main/default/objects/ConditionChange__c/fields/FirstPostSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPostSubmitDate__c</fullName>
    <label>ポスト提出日1回目</label>
    <type>Date</type>
</CustomField>