force-app/main/default/objects/ConditionChange__c/fields/FirstPostSubmitter__c.field-meta.xml
<CustomField>
    <fullName>FirstPostSubmitter__c</fullName>
    <label>ポスト提出者1回目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>