force-app/main/default/objects/ConditionChange__c/fields/ForResponsiblePersonInstructionMemo__c.field-meta.xml
<CustomField>
    <fullName>ForResponsiblePersonInstructionMemo__c</fullName>
    <label>対応指示メモ</label>
    <type>TextArea</type>
</CustomField>