force-app/main/default/objects/ConditionChange__c/fields/GarageDifference__c.field-meta.xml
<CustomField>
    <fullName>GarageDifference__c</fullName>
    <formula>IF(
OR(
ISBLANK( PreviousGarage__c ),ISBLANK( NewGarage__c )
), null, NewGarage__c - PreviousGarage__c 
)</formula>
    <label>駐車場差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>