force-app/main/default/objects/ConditionChange__c/fields/InternalNote_del__c.field-meta.xml
<CustomField>
    <fullName>InternalNote_del__c</fullName>
    <label>案件重要事項</label>
    <type>TextArea</type>
</CustomField>