force-app/main/default/objects/ConditionChange__c/fields/IsCollect__c.field-meta.xml
<CustomField>
    <fullName>IsCollect__c</fullName>
    <label>回収有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>