force-app/main/default/objects/ConditionChange__c/fields/IsCompanyReport__c.field-meta.xml
<CustomField>
    <fullName>IsCompanyReport__c</fullName>
    <label>企業報告有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
                <default>true</default>
                <label>無し</label>
            </value>
            <value>
                <fullName>有り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>