force-app/main/default/objects/ConditionChange__c/fields/IsConclusion__c.field-meta.xml
<CustomField>
    <fullName>IsConclusion__c</fullName>
    <label>書類締結有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>