force-app/main/default/objects/ConditionChange__c/fields/IsImprint__c.field-meta.xml
<CustomField>
    <fullName>IsImprint__c</fullName>
    <label>押印書類有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>