force-app/main/default/objects/ConditionChange__c/fields/IsPayment__c.field-meta.xml
<CustomField>
    <fullName>IsPayment__c</fullName>
    <label>支払有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有り</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>