force-app/main/default/objects/ConditionChange__c/fields/IsTermsChangeCounterAutoNotice__c.field-meta.xml
<CustomField>
    <fullName>IsTermsChangeCounterAutoNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>条件変更窓口自動通知不可</label>
    <type>Checkbox</type>
</CustomField>