force-app/main/default/objects/ConditionChange__c/fields/Keeper__c.field-meta.xml
<CustomField>
    <fullName>Keeper__c</fullName>
    <label>保管者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>