force-app/main/default/objects/ConditionChange__c/fields/LandlordChangeDate__c.field-meta.xml
<CustomField>
    <fullName>LandlordChangeDate__c</fullName>
    <label>貸主変更日</label>
    <type>Date</type>
</CustomField>