force-app/main/default/objects/ConditionChange__c/fields/LandlordChangeUnclear__c.field-meta.xml
<CustomField>
    <fullName>LandlordChangeUnclear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>貸主変更日不明</label>
    <type>Checkbox</type>
</CustomField>