force-app/main/default/objects/ConditionChange__c/fields/LayoutNum__c.field-meta.xml
<CustomField>
    <fullName>LayoutNum__c</fullName>
    <label>新間取_数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>