force-app/main/default/objects/ConditionChange__c/fields/LenderChangeDateConfirmer__c.field-meta.xml
<CustomField>
    <fullName>LenderChangeDateConfirmer__c</fullName>
    <label>貸主変更日確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>