force-app/main/default/objects/ConditionChange__c/fields/LenderChangeDateCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>LenderChangeDateCreatedBy__c</fullName>
    <label>貸主変更日登録者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>