force-app/main/default/objects/ConditionChange__c/fields/LenderProxy__c.field-meta.xml
<CustomField>
    <fullName>LenderProxy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>貸主代理</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>条件変更 (貸主代理ID)</relationshipLabel>
    <relationshipName>ConditionChangeLandlordRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>