force-app/main/default/objects/ConditionChange__c/fields/LenderProxyText__c.field-meta.xml
<CustomField>
    <fullName>LenderProxyText__c</fullName>
    <label>貸主代理(テキスト)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>