force-app/main/default/objects/ConditionChange__c/fields/ManagementChargeDifference__c.field-meta.xml
<CustomField>
    <fullName>ManagementChargeDifference__c</fullName>
    <formula>IF(
OR(
ISBLANK( PreviousManagementCharge__c ),ISBLANK( NewManagementCharge__c )
), null, NewManagementCharge__c - PreviousManagementCharge__c 
)</formula>
    <label>管理費差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>