force-app/main/default/objects/ConditionChange__c/fields/ManagementCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyName__c</fullName>
    <formula>ManagementCompany__r.Account__r.Name</formula>
    <label>管理会社名</label>
    <type>Text</type>
</CustomField>