force-app/main/default/objects/ConditionChange__c/fields/MonthlyVariableCost2TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>MonthlyVariableCost2TaxCategory__c</fullName>
    <label>月次変動費2課税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>