force-app/main/default/objects/ConditionChange__c/fields/NewCityKana__c.field-meta.xml
<CustomField>
    <fullName>NewCityKana__c</fullName>
    <label>新住所_市区フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>