force-app/main/default/objects/ConditionChange__c/fields/NewContractTermStartDate__c.field-meta.xml
<CustomField>
    <fullName>NewContractTermStartDate__c</fullName>
    <label>新契約始期</label>
    <type>Date</type>
</CustomField>