force-app/main/default/objects/ConditionChange__c/fields/NewKana__c.field-meta.xml
<CustomField>
    <fullName>NewKana__c</fullName>
    <label>新物件名フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>