force-app/main/default/objects/ConditionChange__c/fields/NewLandlord2__c.field-meta.xml
<CustomField>
    <fullName>NewLandlord2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新貸主2</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>条件変更 (新家主2)</relationshipLabel>
    <relationshipName>ConditionChangeLandlordRelation102</relationshipName>
    <type>Lookup</type>
</CustomField>