force-app/main/default/objects/ConditionChange__c/fields/NewLandlord3__c.field-meta.xml
<CustomField>
    <fullName>NewLandlord3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新貸主3</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>条件変更 (新家主3)</relationshipLabel>
    <relationshipName>ConditionChangeLandlordRelation104</relationshipName>
    <type>Lookup</type>
</CustomField>