force-app/main/default/objects/ConditionChange__c/fields/NewLandlord4__c.field-meta.xml
<CustomField>
    <fullName>NewLandlord4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新貸主4</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>条件変更 (新家主4)</relationshipLabel>
    <relationshipName>ConditionChangeLandlordRelation106</relationshipName>
    <type>Lookup</type>
</CustomField>