force-app/main/default/objects/ConditionChange__c/fields/NewManagementChargeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>NewManagementChargeTaxCategory__c</fullName>
    <label>新管理費税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>