force-app/main/default/objects/ConditionChange__c/fields/NewOtherAmount3__c.field-meta.xml
<CustomField>
    <fullName>NewOtherAmount3__c</fullName>
    <label>新その他3_金額（税込）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>