force-app/main/default/objects/ConditionChange__c/fields/NewRealEstateAdress__c.field-meta.xml
<CustomField>
    <fullName>NewRealEstateAdress__c</fullName>
    <label>新物件住所</label>
    <type>TextArea</type>
</CustomField>