force-app/main/default/objects/ConditionChange__c/fields/NewRent__c.field-meta.xml
<CustomField>
    <fullName>NewRent__c</fullName>
    <label>新家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>