force-app/main/default/objects/ConditionChange__c/fields/NewStreetKana__c.field-meta.xml
<CustomField>
    <fullName>NewStreetKana__c</fullName>
    <label>新住所_市区以降フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>