force-app/main/default/objects/ConditionChange__c/fields/OperatorUncheckNumManual__c.field-meta.xml
<CustomField>
    <fullName>OperatorUncheckNumManual__c</fullName>
    <label>OP未チェック数（手動）</label>
    <summaryFilterItems>
        <field>ConditionChangeCheck__c.CheckCategory__c</field>
        <operation>notEqual</operation>
        <value>自動</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ConditionChangeCheck__c.OperatorCheck__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ConditionChangeCheck__c.ConditionChange__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>