force-app/main/default/objects/ConditionChange__c/fields/Other5FieldsTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>Other5FieldsTaxCategory__c</fullName>
    <label>その他５項目課税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>