force-app/main/default/objects/ConditionChange__c/fields/OtherAmount2__c.field-meta.xml
<CustomField>
    <fullName>OtherAmount2__c</fullName>
    <label>その他2_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>