force-app/main/default/objects/ConditionChange__c/fields/OtherAmount4__c.field-meta.xml
<CustomField>
    <fullName>OtherAmount4__c</fullName>
    <label>その他4_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>