force-app/main/default/objects/ConditionChange__c/fields/OtherAmount5__c.field-meta.xml
<CustomField>
    <fullName>OtherAmount5__c</fullName>
    <label>その他5_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>