force-app/main/default/objects/ConditionChange__c/fields/OtherDifference2__c.field-meta.xml
<CustomField>
    <fullName>OtherDifference2__c</fullName>
    <formula>IF(
OR(
ISBLANK( PreviousOtherAmount2__c ),ISBLANK( OtherAmount2__c )
), null, OtherAmount2__c - PreviousOtherAmount2__c
)</formula>
    <label>その他２差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>