force-app/main/default/objects/ConditionChange__c/fields/OtherDifference3__c.field-meta.xml
<CustomField>
    <fullName>OtherDifference3__c</fullName>
    <formula>IF(
OR(
ISBLANK( PreviousOtherAmount3__c ),ISBLANK( OtherAmount3__c )
), null, OtherAmount3__c - PreviousOtherAmount3__c
)</formula>
    <label>その他３差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>