force-app/main/default/objects/ConditionChange__c/fields/OtherDifference4__c.field-meta.xml
<CustomField>
    <fullName>OtherDifference4__c</fullName>
    <formula>IF(
OR(
ISBLANK( PreviousOtherAmount4__c ),ISBLANK( OtherAmount4__c )
), null, OtherAmount4__c - PreviousOtherAmount4__c
)</formula>
    <label>その他４差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>