force-app/main/default/objects/ConditionChange__c/fields/OtherFields2__c.field-meta.xml
<CustomField>
    <fullName>OtherFields2__c</fullName>
    <label>新その他2_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>