force-app/main/default/objects/ConditionChange__c/fields/OtherFields4__c.field-meta.xml
<CustomField>
    <fullName>OtherFields4__c</fullName>
    <label>新その他4_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>