force-app/main/default/objects/ConditionChange__c/fields/OtherFields5__c.field-meta.xml
<CustomField>
    <fullName>OtherFields5__c</fullName>
    <label>新その他5_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>