force-app/main/default/objects/ConditionChange__c/fields/OtherFieldsTaxType1__c.field-meta.xml
<CustomField>
    <fullName>OtherFieldsTaxType1__c</fullName>
    <label>新その他1_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>