force-app/main/default/objects/ConditionChange__c/fields/OtherFieldsTaxType4__c.field-meta.xml
<CustomField>
    <fullName>OtherFieldsTaxType4__c</fullName>
    <label>新その他4_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>