force-app/main/default/objects/ConditionChange__c/fields/OtherProcedureExpense1Fields__c.field-meta.xml
<CustomField>
    <fullName>OtherProcedureExpense1Fields__c</fullName>
    <label>その他手続き費用1項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>