force-app/main/default/objects/ConditionChange__c/fields/OtherProcedureExpense3Fields__c.field-meta.xml
<CustomField>
    <fullName>OtherProcedureExpense3Fields__c</fullName>
    <label>その他手続き費用3項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>