force-app/main/default/objects/ConditionChange__c/fields/OtherProcedureExpense3TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>OtherProcedureExpense3TaxCategory__c</fullName>
    <label>その他手続き費用3税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>