force-app/main/default/objects/ConditionChange__c/fields/OtherProcedureExpense4Amount__c.field-meta.xml
<CustomField>
    <fullName>OtherProcedureExpense4Amount__c</fullName>
    <label>その他手続き費用4金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>