force-app/main/default/objects/ConditionChange__c/fields/OtherProcedureExpense4Fields__c.field-meta.xml
<CustomField>
    <fullName>OtherProcedureExpense4Fields__c</fullName>
    <label>その他手続き費用4項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>