force-app/main/default/objects/ConditionChange__c/fields/Penalty2StartDate__c.field-meta.xml
<CustomField>
    <fullName>Penalty2StartDate__c</fullName>
    <label>新違約金2_期間始まり</label>
    <type>Date</type>
</CustomField>