force-app/main/default/objects/ConditionChange__c/fields/Penalty3EndDate__c.field-meta.xml
<CustomField>
    <fullName>Penalty3EndDate__c</fullName>
    <label>新違約金3_期間終わり</label>
    <type>Date</type>
</CustomField>